# Central-Error-Manager

./: CHARTER.md  README.md  pyproject.toml
central_error_manager/: __init__.py  classifier.py  error.py  manager.py  report.py  resolver.py
tests/: test_classifier.py  test_error.py  test_manager.py  test_report.py  test_resolver.py
